manifests/dev/gramps-web/Namespace-gramps-web.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: gramps-web
