manifests/dev/gramps-web/Service-gramps-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: gramps-web
  namespace: gramps-web
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: gramps-web
    app.kubernetes.io/name: gramps-web
  type: ClusterIP
